# Laksh.ai

./: Dockerfile  Makefile  README.md  agent_test.txt  pyproject.toml
.github/workflows/: ci.yml
artifacts/run-main/: summary.json
scripts/: laksh.py
src/lakshai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/lakshai/io/: __init__.py  video.py
src/lakshai/pipeline/: base.py
tests/: test_import.py  test_run.py
