[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lakshai"
version = "0.0.1"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.3",
  "opencv-python-headless>=4.8.0",
  "numpy>=1.26",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"